2008-10-14  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidCodeDuplicatedInSiblingClassesRule.cs: Added XML documentation.

2008-10-14  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidCodeDuplicatedInSameClassRule.cs: Added XML documentation.

2008-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMessageChainsRule.cs: Use TraceBack rock to fix false 
	positives. Use OpCodeBitmask to simplify the rule. Add OpCodeEngine
	to avoid executing the rule when possible.
	* Gendarme.Rules.Smells.mdp: Add rule to MD project file.
	* Makefile.am: Re-enable the rule now that the known false 
	positives are fixed.

2008-08-14  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidSpeculativeGeneralityRule.cs: Avoid creating an instance of
	AvoidUnusedParametersRule at each CheckType call if the rule is not
	already scheduled for execution.

2008-08-12  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Change rule to count logical source line
	of code by default, i.e. when debugging symbols are available. 
	Otherwise rule continue to use IL-SLOC approximation.
	* CodeDuplicatedLocator.cs: Use IRule interface, instead of Rule, 
	inside CompareMethodAgainstTypeMethods (since rules don't need to be
	based on the abstract Rule "convenience" class).

2008-08-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Use generic collections.

2008-07-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongMethodsRule.cs: Checking only the static fields and constants
	will avoid the false positive with readonly fields.

2008-07-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsRule.cs: Fix CheckDelegate to work on
	MulticastDelegate definition (no Invoke method is present).

2008-07-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Start using ../common.make. Do not build 
	AvoidMessageChainsRule until its false positive rate is lower.

2008-07-09  Sebastien Pouliot  <sebastien@ximian.com>
